communities html validation done

--- a/views/newCommunity.handlebars
+++ b/views/newCommunity.handlebars
@@ -1,7 +1,7 @@
 {{>header}}
 <div class="formWrapper">
   <div class="formInside">
-    <form action="/communities/create" method="POST" class="communityForm", id="communityForm">
+    <form action="/communities/create" method="POST" class="communityForm" id="communityForm">
       <label for="title">Title:</label>
       <input type="text" id="title" name="title">
       <span class="error" id="titleError"></span>
