--- a/views/question.handlebars
+++ b/views/question.handlebars
@@ -2,10 +2,10 @@
 {{#if question}}
   <div class="questionWrapper1 flex flex-col mx-20">
     <div class="flex flex-row basis-1/5 border-b-2 py-7">
-    <div class="basis-4/5"><h1 class="font-bold text-2xl text-slate-700">{{title}}</h1></div>
-    <div class="basis-1/5"><button class="rounded-lg px-2 py-2  bg-sky-600 text-white hover:bg-sky-700" value="Ask Question" onclick="location.href='/questions/question'">Ask Question</button></div>
+      <div class="basis-4/5"><h1 class="font-bold text-2xl text-slate-700">{{title}}</h1></div>
+      <div class="basis-1/5"><button class="rounded-lg px-2 py-2  bg-sky-600 text-white hover:bg-sky-700" value="Ask Question" onclick="location.href='/questions/question'">Ask Question</button></div>
     </div>
-    <div class="basis-4/5 flex flex-row">
+    <div class="basis-4/5 flex flex-row scroll-smooth min-h-screen overflow-scroll min-w-screen">
       <div class="questionStats basis-2/7 my-4 mx-4">
         <span class="material-symbols-outlined rounded-full hover:bg-orange-100 p-4 hover:cursor-pointer thumb_up_icon" id="thumb_up">thumb_up</span><br>
         <span class="inline-block max-w-[1px] text-center my-2 mx-6 text-center" id="votes">{{question.votes}}</span><br>
@@ -38,39 +38,40 @@
         {{/if}}
 
         {{#if accepted}}
-        <div class="comment flex flex-col my-4 mx-4">
+        <p class="text-xl font-medium text-sky-600 mt-4 mx-4">Accepted comment</p>
+        <div class="comment flex flex-col space-my-4 mx-4 p-4">
               <p class="text-sm">{{accepted.commentText}}</p>
               <p class="text-xs text-gray-500">{{accepted.commenter}} - {{accepted.createdAt}}</p>
             </div>
 
-            <div class="commentsSection">
-            <h2 class="text-xl font-semibold mt-8">Comments</h2>
-            {{#each comment}}
-              <div class="comment flex flex-col my-4 mx-4">
-                <p class="text-sm">{{this.commentText}}</p>
-                <p class="text-xs text-gray-500">{{this.commenter}} - {{this.createdAt}}</p>
-              </div>
-            {{/each}}
+            <div class="commentsSection mb-16">
+              <h2 class="text-xl font-semibold mt-8 ml-4">Comments</h2>
+              {{#each comment}} 
+                <div class="comment flex flex-col my-4 mx-4 p-4">
+                  <p class="text-sm">{{this.commentText}}</p>
+                  <p class="text-xs text-gray-500">{{this.commenter}} - {{this.createdAt}}</p>
+                </div>
+              {{/each}}
             </div>
         
         {{else}}
         {{#if owner}}
-        <div class="commentsSection">
-          <h2 class="text-xl font-semibold mt-8">Comments</h2>
+        <div class="commentsSection mb-16">
+          <h2 class="text-xl font-semibold mt-8 ml-4">Comments</h2>
 
           <form id="comment_selector" action="/comments/api/commentAccepted/{{question._id}}" method="post">
-        <div class="text-center mt-6">
-          <button class="rounded-lg px-4 py-2 bg-sky-600 text-white hover:bg-sky-700" type="submit" value="submit">Accept Answer</button>
+        <div class="mt-6 ml-4">
+          <button class="rounded-lg px-2 py-2 bg-sky-600 text-white hover:bg-sky-700" type="submit" value="submit">Accept Answer</button>
         </div>
           {{#each comment}}
-            <div class="comment flex flex-col my-4 mx-4">
+            <div class="comment flex flex-col my-4 mx-4 p-4">
               <p class="text-sm">{{this.commentText}}</p>
               <p class="text-xs text-gray-500">{{this.commenter}} - {{this.createdAt}}</p>
               <div class="buttonGroup mt-2">
                 
                 <label for="commentId">
                 <i class="fas fa-check"></i>
-                <input type="radio" name="commentId" id="commentId" value="{{this.id}}" class="form-radio h-5 w-5 text-sky-600">
+                <input type="radio" name="commentId" id="commentId" value="{{this.id}}" class="form-radio h-5 w-5 text-sky-600 p-2"><span class="text-sm mx-2 font-light text-gray-500">accept</span>
                 </label>
               </div>
             </div>
@@ -78,8 +79,8 @@
           </form>
         </div>
         {{else}}
-        <div class="commentsSection">
-          <h2 class="text-xl font-semibold mt-8">Comments</h2>
+        <div class="commentsSection mb-16">
+          <h2 class="text-xl font-semibold mt-8 ml-4">Comments</h2>
           {{#each comment}}
             <div class="comment flex flex-col my-4 mx-4">
               <p class="text-sm">{{this.commentText}}</p>
@@ -103,3 +104,5 @@
     <h3>{{message}}</h3>
   </div>
 {{/if}}
+
+{{>footer}}
