useractivity style fixes

--- a/views/userActivity.handlebars
+++ b/views/userActivity.handlebars
@@ -6,7 +6,7 @@
         <p class="bigText font-bold text-white text-lg">Stevens Email: {{user.stevensEmail}}</p>
         <p class="bigText font-bold text-white text-lg">Academic Status: {{user.academicStatus}}</p>
         <p id="rating" class="bigText font-bold text-lg text-yellow-500">Duck Score: {{activity.rating}}</p>
-        <a href="/userActivity/setting"><img src="/images/setting-icon.png" alt="setting-icon" class="setting-icon"></a> 
+        <span class="material-symbols-outlined text-white text-4xl hover:cursor-pointer" onclick="location.href='/userActivity/setting'">settings</span>
     </div>
 
     <div id="midDiv" class="bg-black flex items-center justify-evenly flex-wrap h-[7vh]">
